--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,18 +16,21 @@
         android:theme="@style/Theme.SaludTotalApp"
         tools:targetApi="31">
         <activity
-            android:name=".ViewModel.Menu1Activity"
+            android:name=".viewmodel.Menu1Activity"
+
             android:exported="false" />
         <activity
-            android:name=".ViewModel.MainActivity"
+            android:name=".viewmodel.MainActivity"
             android:exported="true">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ViewModel.RegisterActivity" />
+        <activity android:name=".viewmodel.RegisterActivity" />
+        <activity android:name=".viewmodel.MenuAdminActivity" />
     </application>
 
 </manifest>
