Se puede ver los detalles de un paciente y agregarlos a una lista tipo "Mi favoritos", pero imporvisado a modo de practica

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,9 @@
         </activity>
         <activity android:name=".viewmodel.RegisterActivity" />
         <activity android:name=".viewmodel.MenuAdminActivity" />
+        <activity android:name=".viewmodel.DetallePacienteActivity" />
+        <activity android:name=".viewmodel.FavoritosActivity" />
+
     </application>
 
 </manifest>
